--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <!--
+  https://theinfogrid.com/tech/developers/angular/material-icons-angular-5/
+  npm install material-design-icons --save 
+  "styles": [ "../node_modules/material-design-icons/iconfont/material-icons.css", "styles.css" ],
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  npm install roboto-font  --save
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  -->
 </head>
 <body>
   <app-root>
